--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.2",
     "@astrojs/check": "^0.9.3",
-    "typescript": "^5.5.4"
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.8.0",
+    "@astrojs/vue": "^4.5.0",
+    "astro": "^4.15.2",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4",
+    "vue": "^3.5.1"
   }
 }
